--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" data-bs-theme="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="KR3RULIE" />
-    <meta name="description" content="Esta web contre una CRUD de cuentas de usuarios">
-    <meta name="keywords" content="cuetas, base de datos, js, html, usuarios">
+    <meta
+      name="description"
+      content="Esta web contre una CRUD de cuentas de usuarios"
+    />
+    <meta name="keywords" content="cuetas, base de datos, js, html, usuarios" />
     <title>Cuentas de Usuarios</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
@@ -13,12 +16,26 @@
       integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+  <body class="text-center">
+    <header>
+      <h1 class="mt-5 text-warning">Cuentas de usuarios</h1>
+    </header>
+    <main>
+        
+    </main>
+    <footer class="text-center fs-5 bg-dark-subtle">
+      <p>
+        By
+        <a
+          class="link-info text-decoration-none"
+          href="https://github.com/KR3RULIE"
+          >KR3RULIE</a
+        >
+      </p>
+      <p>&copy;Todos los derecos reservados.</p>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
