--- a/index.html
+++ b/index.html
@@ -22,9 +22,92 @@
     <header>
       <h1 class="mt-5 text-warning">Cuentas de usuarios</h1>
     </header>
-    <main>
-        
+    <main class="container">
+      <div class="d-flex justify-content-between">
+        <h1>Lista de cuentas</h1>
+        <button class="btn btn-primary" id="btnRegistro">Registrarse</button>
+      </div>
     </main>
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="modalRegistro"
+      tabindex="-1"
+      aria-labelledby="modalContactoLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="modalContactoLabel">
+              Registro
+            </h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form class="text-start">
+              <div class="mb-3">
+                <label for="nombre" class="form-label">ID Cuenta*</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="nombre"
+                  aria-describedby="Ingresar nombre"
+                  minlength="2"
+                  maxlength="50"
+                  placeholder="Ej: Juan"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="nombre" class="form-label">Contraseña*</label>
+                <input
+                  type="password"
+                  class="form-control"
+                  id="nombre"
+                  aria-describedby="Ingresar nombre"
+                  minlength="2"
+                  maxlength="50"
+                  placeholder="Ej: J#41g2$5a.57k"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="nombre" class="form-label"
+                  >Repetir contraseña*</label
+                >
+                <input
+                  type="password"
+                  class="form-control"
+                  id="nombre"
+                  aria-describedby="Ingresar nombre"
+                  minlength="2"
+                  maxlength="50"
+                  placeholder="Ej: J#41g2$5a.57k"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="email" class="form-label">Email*</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  id="email"
+                  placeholder="Ej: juanperez@mail.com"
+                  required
+                />
+              </div>
+              <button type="submit" class="btn btn-primary">Registrar</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
     <footer class="text-center fs-5 bg-dark-subtle">
       <p>
         By
@@ -41,6 +124,6 @@
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
       crossorigin="anonymous"
     ></script>
-    <script src="./js/app.js"></script>
+    <script src="./js/app.js" type="module"></script>
   </body>
 </html>
