cree un usuario y lo agregue al array de cuentas, y liimpio el formulario

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
           <div class="modal-body">
             <form class="text-start">
               <div class="mb-3">
-                <label for="nombre" class="form-label">ID Cuenta*</label>
+                <label for="idcuenta" class="form-label">ID Cuenta*</label>
                 <input
                   type="text"
                   class="form-control"
-                  id="nombre"
+                  id="idcuenta"
                   aria-describedby="Ingresar nombre"
                   minlength="2"
                   maxlength="50"
@@ -65,11 +65,11 @@
                 />
               </div>
               <div class="mb-3">
-                <label for="nombre" class="form-label">Contraseña*</label>
+                <label for="contraseña" class="form-label">Contraseña*</label>
                 <input
                   type="password"
                   class="form-control"
-                  id="nombre"
+                  id="contraseña"
                   aria-describedby="Ingresar nombre"
                   minlength="2"
                   maxlength="50"
@@ -78,13 +78,13 @@
                 />
               </div>
               <div class="mb-3">
-                <label for="nombre" class="form-label"
+                <label for="recontraseña" class="form-label"
                   >Repetir contraseña*</label
                 >
                 <input
                   type="password"
                   class="form-control"
-                  id="nombre"
+                  id="recontraseña"
                   aria-describedby="Ingresar nombre"
                   minlength="2"
                   maxlength="50"
