agregamos una fila nueva en la tabla cuando creamos un contacto nuevo

--- a/index.html
+++ b/index.html
@@ -27,6 +27,21 @@
         <h1>Lista de cuentas</h1>
         <button class="btn btn-primary" id="btnRegistro">Registrarse</button>
       </div>
+      <section class="table-responsive">
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">ID Cuenta</th>
+              <th scope="col">Contraseña</th>
+              <th scope="col">Repetir contraseña</th>
+              <th scope="col">Email</th>
+              <th scope="col">Acciones</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </section>
     </main>
     <!-- Modal -->
     <div
@@ -39,9 +54,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h1 class="modal-title fs-5" id="modalContactoLabel">
-              Registro
-            </h1>
+            <h1 class="modal-title fs-5" id="modalContactoLabel">Registro</h1>
             <button
               type="button"
               class="btn-close"
