--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h1 class="modal-title fs-5" id="modalContactoLabel">Registro</h1>
+            <h1 class="modal-title fs-5" id="modalContactoLabel"></h1>
             <button
               type="button"
               class="btn-close"
@@ -119,7 +119,7 @@
                   required
                 />
               </div>
-              <button type="submit" class="btn btn-primary">Registrar</button>
+              <button type="submit" id="btnSubmit" class="btn btn-primary"></button>
             </form>
           </div>
         </div>
