--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
                   placeholder="Ruli15"
                   required
                 />
+                <div class="valid-feedback">Bien hecho!</div>
+                <div class="invalid-feedback">Campo incorrecto! La cantidad de caracteres debe ser entre 2 y 50</div>
               </div>
               <div class="mb-3">
                 <label for="contraseña" class="form-label">Contraseña *</label>
@@ -98,6 +100,8 @@
                   placeholder="J#41g2$5a.57k"
                   required
                 />
+                <div class="valid-feedback">Bien hecho!</div>
+                <div class="invalid-feedback">Campo incorrecto! La cantidad de caracteres debe ser entre 2 y 50</div>
               </div>
               <div class="mb-3">
                 <label for="recontraseña" class="form-label"
@@ -113,6 +117,8 @@
                   placeholder="J#41g2$5a.57k"
                   required
                 />
+                <div class="valid-feedback">Bien hecho!</div>
+                <div class="invalid-feedback">Campo incorrecto! La cantidad de caracteres debe ser entre 2 y 50</div>
               </div>
               <div class="mb-3">
                 <label for="email" class="form-label">Email *</label>
@@ -123,6 +129,8 @@
                   placeholder="ejemplo@gmail.com"
                   required
                 />
+                <div class="valid-feedback">Bien hecho!</div>
+                <div class="invalid-feedback">Campo incorrecto!</div>
               </div>
               <div class="mb-3">
                 <label for="text" class="form-label">¿Char favorito? *</label>
