--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       content="Esta web contre una CRUD de cuentas de usuarios"
     />
     <meta name="keywords" content="cuetas, base de datos, js, html, usuarios" />
-    <title>Cuentas de Usuarios</title>
+    <title>Mu Online</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,6 +21,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="shortcut icon" href="favicon.ico?v=2" type="image/x-icon">
   </head>
   <body class="text-center">
     <header>
@@ -81,12 +82,11 @@
                   id="idcuenta"
                   aria-describedby="Ingresar nombre"
                   minlength="2"
-                  maxlength="50"
+                  maxlength="16"
                   placeholder="Ruli15"
-                  required
                 />
                 <div class="valid-feedback">Bien hecho!</div>
-                <div class="invalid-feedback">Campo incorrecto! La cantidad de caracteres debe ser entre 2 y 50</div>
+                <div class="invalid-feedback">Campo incorrecto! La cantidad de caracteres debe ser entre 6 y 16</div>
               </div>
               <div class="mb-3">
                 <label for="contraseña" class="form-label">Contraseña *</label>
@@ -95,13 +95,12 @@
                   class="form-control"
                   id="contraseña"
                   aria-describedby="Ingresar nombre"
-                  minlength="2"
-                  maxlength="50"
+                  minlength="8"
+                  maxlength="16"
                   placeholder="J#41g2$5a.57k"
-                  required
                 />
                 <div class="valid-feedback">Bien hecho!</div>
-                <div class="invalid-feedback">Campo incorrecto! La cantidad de caracteres debe ser entre 2 y 50</div>
+                <div class="invalid-feedback">Campo incorrecto! La cantidad de caracteres debe ser entre 8 y 16</div>
               </div>
               <div class="mb-3">
                 <label for="recontraseña" class="form-label"
@@ -112,13 +111,12 @@
                   class="form-control"
                   id="recontraseña"
                   aria-describedby="Ingresar nombre"
-                  minlength="2"
-                  maxlength="50"
+                  minlength="8"
+                  maxlength="16"
                   placeholder="J#41g2$5a.57k"
-                  required
                 />
                 <div class="valid-feedback">Bien hecho!</div>
-                <div class="invalid-feedback">Campo incorrecto! La cantidad de caracteres debe ser entre 2 y 50</div>
+                <div class="invalid-feedback">Campo incorrecto! La cantidad de caracteres debe ser entre 8 y 16</div>
               </div>
               <div class="mb-3">
                 <label for="email" class="form-label">Email *</label>
@@ -127,7 +125,6 @@
                   class="form-control"
                   id="email"
                   placeholder="ejemplo@gmail.com"
-                  required
                 />
                 <div class="valid-feedback">Bien hecho!</div>
                 <div class="invalid-feedback">Campo incorrecto!</div>
