--- a/pages/detalleCuenta.html
+++ b/pages/detalleCuenta.html
@@ -15,7 +15,8 @@
       integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
       crossorigin="anonymous"
     />
-    <title>Detalles</title>
+    <link rel="shortcut icon" href="../favicon.ico?v=2" type="image/x-icon">
+    <title>Mu Online</title>
   </head>
   <body>
     <header>
@@ -60,7 +61,7 @@
           >KR3RULIE</a
         >
       </p>
-      <p>&copy;Todos los derecos reservados.</p>  
+      <p>&copy;Todos los derecos reservados.</p>
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
