--- a/pages/detalleCuenta.html
+++ b/pages/detalleCuenta.html
@@ -8,21 +8,21 @@
       name="description"
       content="En esta web veras el detalle de la cuenta"
     />
-    <link rel="stylesheet" href="../css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+      integrity="sha384-..."
       crossorigin="anonymous"
     />
-    <link rel="shortcut icon" href="../favicon.ico?v=2" type="image/x-icon">
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="shortcut icon" href="../favicon.ico?v=2" type="image/x-icon" />
     <title>Mu Online</title>
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
-          <a class="navbar-brand" href="../index.html">Detalle de la cuenta</a>
+          <a class="navbar-brand" href="#">Mu Online</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -35,9 +35,50 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" href="./error404.html">Nosotros</a>
+                <a class="nav-link" aria-current="page" href="#">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Reglas</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Registrar</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Iniciar sesión</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle active"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Menu Admin
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Editar set</a></li>
+                  <li><a class="dropdown-item" href="#">Editar armas</a></li>
+                  <li>
+                    <a class="dropdown-item" href="#">Gestionar cuentas</a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="d-flex gap-2 align-items-center nav-item">
+                <img
+                  src="../img/admin.png"
+                  alt="Logo admin"
+                  class="img-fluid tamanio"
+                />
+                <p class="my-auto">Usuario: Admin</p>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Cerrar sesion</a>
               </li>
             </ul>
           </div>
