agregue estilo a la pagina de detalle

--- a/pages/detalleCuenta.html
+++ b/pages/detalleCuenta.html
@@ -19,8 +19,13 @@
     <title>Mu Online</title>
   </head>
   <body>
+    <img
+      src="../img/fondoDetalle.webp"
+      alt="Es Mouse Elf de mu online"
+      class="w-100 h-100 bg-img"
+    />
     <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <nav class="navbar navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand" href="#">Mu Online</a>
           <button
@@ -50,7 +55,7 @@
               </li>
               <li class="nav-item dropdown">
                 <a
-                  class="nav-link dropdown-toggle active"
+                  class="nav-link dropdown-toggle"
                   href="#"
                   role="button"
                   data-bs-toggle="dropdown"
@@ -88,12 +93,14 @@
     <main>
       <main class="container my-4">
         <h1>Cuenta</h1>
-        <section id="contact">
-          <div class="card mb-3"></div>
+        <section id="contact" class="container">
+          <div class="card mb-3">
+            <img src="../img/fondo.jpg" alt="Son los personajes de Mu Online" />
+          </div>
         </section>
       </main>
     </main>
-    <footer class="text-center fs-5 bg-dark-subtle">
+    <footer class="text-center fs-5">
       <p>
         By
         <a
