agregue estilos a la pagina de error 404 y corregi los link del navbar

--- a/pages/detalleCuenta.html
+++ b/pages/detalleCuenta.html
@@ -27,12 +27,12 @@
     <header>
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="#">Mu Online</a>
+          <a class="navbar-brand" href="./error404.html">Mu Online</a>
           <button
             class="navbar-toggler"
             type="button"
             data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
+            data-bs-target="./error404.htmlnavbarSupportedContent"
             aria-controls="navbarSupportedContent"
             aria-expanded="false"
             aria-label="Toggle navigation"
@@ -42,21 +42,21 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Inicio</a>
+                <a class="nav-link" aria-current="page" href="./error404.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Reglas</a>
+                <a class="nav-link" href="./error404.html">Reglas</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Registrar</a>
+                <a class="nav-link" href="./error404.html">Registrar</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Iniciar sesión</a>
+                <a class="nav-link" href="./error404.html">Iniciar sesión</a>
               </li>
               <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
-                  href="#"
+                  href="./error404.html"
                   role="button"
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
@@ -64,10 +64,10 @@
                   Menu Admin
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Editar set</a></li>
-                  <li><a class="dropdown-item" href="#">Editar armas</a></li>
+                  <li><a class="dropdown-item" href="./error404.html">Editar set</a></li>
+                  <li><a class="dropdown-item" href="./error404.html">Editar armas</a></li>
                   <li>
-                    <a class="dropdown-item" href="#">Gestionar cuentas</a>
+                    <a class="dropdown-item" href="../index.html">Gestionar cuentas</a>
                   </li>
                 </ul>
               </li>
@@ -83,7 +83,7 @@
                 <p class="my-auto">Usuario: Admin</p>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Cerrar sesion</a>
+                <a class="nav-link" href="./error404.html">Cerrar sesion</a>
               </li>
             </ul>
           </div>
