--- a/pages/error404.html
+++ b/pages/error404.html
@@ -20,9 +20,9 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
-          <a class="navbar-brand" href="#">Mu Online</a>
+          <a class="navbar-brand" href="./error404.html">Mu Online</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -37,16 +37,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Inicio</a>
+                <a class="nav-link" aria-current="page" href="./error404.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Reglas</a>
+                <a class="nav-link" href="./error404.html">Reglas</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Registrar</a>
+                <a class="nav-link" href="./error404.html">Registrar</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Iniciar sesión</a>
+                <a class="nav-link" href="./error404.html">Iniciar sesión</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -59,10 +59,10 @@
                   Menu Admin
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Editar set</a></li>
-                  <li><a class="dropdown-item" href="#">Editar armas</a></li>
+                  <li><a class="dropdown-item" href="./error404.html">Editar set</a></li>
+                  <li><a class="dropdown-item" href="./error404.html">Editar armas</a></li>
                   <li>
-                    <a class="dropdown-item" href="#">Gestionar cuentas</a>
+                    <a class="dropdown-item" href="../index.html">Gestionar cuentas</a>
                   </li>
                 </ul>
               </li>
@@ -78,19 +78,29 @@
                 <p class="my-auto">Usuario: Admin</p>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Cerrar sesion</a>
+                <a class="nav-link" href="./error404.html">Cerrar sesion</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
-    <main>
-      <main>
-        <img src="../img/fondo.jpg" alt="Son los 4 personajes de Mu Online" class="w-100 h-100">
-      </main>
+    <main class="contenedorPadre">
+      <section class="contenedorHijo">
+        <h1 class="text-center">ERROR 404</h1>
+        <img
+          src="../img/error404.jpg"
+          alt="Son los 4 personajes de Mu Online"
+          class="w-100 h-100 rounded-5"
+        />
+        <div class="d-flex justify-content-center mt-3">
+          <a href="../index.html" class="btn btn-outline-primary"
+            >Volver a gestion de cuentas</a
+          >
+        </div>
+      </section>
     </main>
-    <footer class="text-center fs-5">
+    <footer class="text-center fs-5 bg-dark-subtle">
       <p>
         By
         <a
