--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header>
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="#">Mu Online</a>
+          <a class="navbar-brand" href="./pages/error404.html">Mu Online</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -43,21 +43,21 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Inicio</a>
+                <a class="nav-link" aria-current="page" href="./pages/error404.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Reglas</a>
+                <a class="nav-link" href="./pages/error404.html">Reglas</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Registrar</a>
+                <a class="nav-link" href="./pages/error404.html">Registrar</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Iniciar sesión</a>
+                <a class="nav-link" href="./pages/error404.html">Iniciar sesión</a>
               </li>
               <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle active"
-                  href="#"
+                  href="./pages/error404.html"
                   role="button"
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
@@ -65,10 +65,10 @@
                   Menu Admin
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Editar set</a></li>
-                  <li><a class="dropdown-item" href="#">Editar armas</a></li>
+                  <li><a class="dropdown-item" href="./pages/error404.html">Editar set</a></li>
+                  <li><a class="dropdown-item" href="./pages/error404.html">Editar armas</a></li>
                   <li>
-                    <a class="dropdown-item" href="#">Gestionar cuentas</a>
+                    <a class="dropdown-item" href="./index.html">Gestionar cuentas</a>
                   </li>
                 </ul>
               </li>
@@ -84,7 +84,7 @@
                 <p class="my-auto">Usuario: Admin</p>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Cerrar sesion</a>
+                <a class="nav-link" href="./pages/error404.html">Cerrar sesion</a>
               </li>
             </ul>
           </div>
