agregue los required a los campos que lo necesitaban

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
                   minlength="2"
                   maxlength="16"
                   placeholder="Ruli15"
+                  required
                 />
                 <div class="valid-feedback">Bien hecho!</div>
                 <div class="invalid-feedback">
@@ -166,6 +167,7 @@
                   minlength="8"
                   maxlength="16"
                   placeholder="J#41g2$5a.57k"
+                  required
                 />
                 <div class="valid-feedback">Bien hecho!</div>
                 <div class="invalid-feedback">
@@ -185,6 +187,7 @@
                   minlength="8"
                   maxlength="16"
                   placeholder="J#41g2$5a.57k"
+                  required
                 />
                 <div class="valid-feedback">Bien hecho!</div>
                 <div class="invalid-feedback">
@@ -211,7 +214,6 @@
                   <option value="Soul Master">Soul Master</option>
                   <option value="Muse Elf">Muse Elf</option>
                   <option value="Magic Gladiator">Magic Gladiator</option>
-                  <!-- Agrega más países aquí -->
                 </select>
               </div>
               <button
